<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ppp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvBsd"
        android:text="@string/Bsd"
        android:textColor="@color/basic_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPlace_name"
        android:text="@string/place_name"
        android:gravity="center"
        android:textColor="@color/basic_color"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddress"
        android:text="@string/company_address"
        android:autoLink="map"
        android:gravity="center"
        android:textColor="@color/basic_color"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFirstLessonTitle"
        android:text="@string/first_lesson_title"
        android:textColor="@color/lesson_color"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFirstLessonDetails"
        android:text="@string/first_lesson_details"
        android:textColor="@color/details_lesson_color"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSecondLesson"
        android:text="@string/second_lesson_title"
        android:textColor="@color/lesson_color"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"/>

    <TextView
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvSecondLessonDetails"
        android:gravity="center"
        android:text="@string/second_lesson_details"
        android:textColor="@color/details_lesson_color"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvThirdLessonTitle"
        android:text="@string/third_lesson_title"
        android:textColor="@color/lesson_color"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="14dp"/>

    <TextView
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvThirdLessonDetails"
        android:gravity="center"
        android:text="@string/third_lesson_details"
        android:textColor="@color/details_lesson_color"
        android:textSize="20sp"
        android:layout_marginEnd="21dp"/>

</LinearLayout>